--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -286,15 +286,111 @@ h1,h2,h3,h4,h5,h6,p,a,li,div,header,section,footer,label,span,ul,input
 
 
 
+/* Pop-up Layer */
+.pop-layer .pop-container {
+  	/* padding: 20px 25px; */
+  	padding: 5%;
+}
 
+.pop-layer p.ctxt {
+	color: #666;
+	line-height: 25px;
+}
 
+.pop-layer .btn-r {
+	width: 100%;
+	margin: 10px 0 20px;
+	padding-top: 10px;
+	/* border-top: 1px solid #DDD; */
+	text-align: right;
+}
 
+.pop-layer {
+	display: none;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	/* width: 410px; */
+	width: 50%;
+	height: auto;
+	background-color: #fff;
+	border: 5px solid #3571B5;
+	z-index: 10;
+}
 
+.dim-layer {
+	display: none;
+	position: fixed;
+	_position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+}
 
+.dim-layer .dimBg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	opacity: .5;
+	filter: alpha(opacity=50);
+}
 
+.dim-layer .pop-layer {
+	display: block;
+}
 
+a.btn-layerClose {
+	display: inline-block;
+	height: 25px;
+	padding: 0 14px 0;
+	border: 1px solid #304a8a;
+	border-radius: 3px;
+	background-color: #3f5a9d;
+	font-size: 13px;
+	color: #fff;
+	line-height: 25px;
+}
 
+a.btn-layerClose:hover {
+	border: 1px solid #091940;
+	background-color: #1f326a;
+	color: #fff;
+}
+.popup-container{
+	padding: 1em;
+}
+.form-control{
+	padding: 0.3em;
+	border: 1px solid #bbb;
+	border-radius: 3px;
+	margin-top: 0.5%;
+	margin-bottom: 0.5%; 
+	width: 100%;
+	font-size: 15px;
+}
 
+.popup-submit{
+	display: inline-block;
+	padding: 0 14px;
+	border: 1px solid #304a8a;
+	border-radius: 3px;
+	background-color: #3f5a9d;
+	font-size: 13px;
+	color: #fff;
+	line-height: 25px;
+}
+
+.popup-submit:hover {
+	border: 1px solid #091940;
+	background-color: #1f326a;
+	color: #fff;
+	cursor: pointer;
+}
 
 
 
