폼메일 전송 포맷 수정, jsp 파일분할, 모바일 버전에서 index.html로 가면 없는 경로인 것을 homecontroller에 추가

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -361,6 +361,14 @@ a.btn-layerClose:hover {
 	background-color: #1f326a;
 	color: #fff;
 }
+.popup-title{
+	font-size: 25px;
+	font-weight: bold;
+	margin-bottom: 1%;
+}
+.popup-content{
+	margin-bottom: 1%;
+}
 .popup-container{
 	padding: 1em;
 }
@@ -391,28 +399,3 @@ a.btn-layerClose:hover {
 	color: #fff;
 	cursor: pointer;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
