Tex, Fax : 수정(2622, 2623), 모바일 버전 파일 분할, 문의하기 창 텍스트 업데이트,

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -285,6 +285,10 @@ h1,h2,h3,h4,h5,h6,p,a,li,div,header,section,footer,label,span,ul,input
 
 
 
+/* index */
+.m_index_main{
+	font-size: 10px !important;
+}
 
 /* Pop-up Layer */
 .pop-layer .pop-container {
