1. GMT+09:00 : 시간대가 안맞아서 root-context에서 DB연결할때 UTC --> Asia/Seoul로 수정 2. 로그아웃 기능 3. 로그인 성공시 직전에 있던 페이지로 돌아가기 4. 로그인 실패시 메시지 띄우기, 로그인 성공시에는 메시지 안띄우고 진행 5. 다른 페이지에서 세션을 통해 유저정보 공유 가능 6. 세션 테스트 매서드 추가 : 현재는 faqWrite로 로그인 없이 들어가는 것을 막음.

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -291,6 +291,9 @@ h1,h2,h3,h4,h5,h6,p,a,li,div,header,section,footer,label,span,ul,input,textarea
 }
 
 /* Pop-up Layer */
+.popup-btn{
+	cursor: pointer;
+}
 .pop-layer .pop-container {
   	/* padding: 20px 25px; */
   	padding: 5%;
