1. faq 페이징, 2. pre 태그

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -637,6 +637,7 @@ a.btn-layerClose:hover {
 .page-num{
 	display:inline-block;
 	margin: 10px;
+	cursor: pointer;
 }
 .page-num-selected{
 	font-weight: bold;
