--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -643,6 +643,7 @@ a.btn-layerClose:hover {
 .faq-admin-btn-container{
 	text-align: center;
 	padding: 0.5em;
+	padding-top: 0.1em;
 }
 .faq-admin-btn{
 	/* width: 90% !important; */
