--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -431,30 +431,15 @@ a.btn-layerClose:hover {
 	color: #fff;
 	cursor: pointer;
 } 
-.m-pop-layer{
-	padding: 5%;
-color: #666;
-line-height: 25px;
-width: 100%;
-	margin: 10px 0 20px;
-	padding-top: 10px;
-	/* border-top: 1px solid #DDD; */
-	text-align: right;
-display: none;
-	position: absolute;
-	top: 10%;
-	left: 10%;
-	/* width: 410px; */
-	width: 50%;
-	height: auto;
-	background-color: #fff;
-	/* border: 5px solid #3571B5; */
-	/* border: 5px solid #eeb885; */
-	/* border: 3px solid #95c11f; */
-	border: 5px solid #6edac1;
-	z-index: 10;
-display: block;
+@media screen and (max-width:768px) {
+    .pop-layer{
+    	top: 2%;
+    	left: 5%;
+    	width: 90%;
+    	padding: 1%;
+    }
 }
+
 
 /* login */
 .login-mid{
