에디터 엔터시 P --> BR로 수정, 현재 해당 에디터를 전체적으로 감싸는 p태그 가없어서 faq에 추가해서 디스플레이함.

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -438,6 +438,12 @@ a.btn-layerClose:hover {
     	width: 90%;
     	padding: 1%;
     }
+    .pop-container{
+    	padding: 1%;
+    }
+    .popup-container{
+    	padding: 0;
+    }
 }
 
 
