--- a/src/main/webapp/resources/css/common2.css
+++ b/src/main/webapp/resources/css/common2.css
@@ -83,6 +83,24 @@ h1,h2,h3,h4,h5,h6,p,a,li,div,header,section,footer,label,span,ul,input,textarea
 #p1_mid>.p1_mid_menu p{margin:0 20px}
 #p1_mid>.p1_thro_line{position:relative; width:70%; border-top:2px solid #f9c194; margin:0 auto; top:25px}
 
+/** p1 시작 **/
+#p1_top_logoc{top:21.66% !important}
+#p1_menu01{top:25.15% !important}
+#p1_menu02{top:25.15% !important}
+.p1_util a, .p1_util p{color:#666! important}
+#p1_mid{position:relative; width:100%}
+#p1_mid>.p1_mid_menu{position:relative; width:60%; margin:0 auto; height:50px; text-align:center; border:2px solid #f9c194; border-radius:50px; background-color:#FFF; box-sizing:border-box}
+#p1_mid>.p1_mid_menu>ul>li{float:left; text-align:center; padding: 0}
+#p1_mid>.p1_mid_menu>ul>li:nth-child(1){width:30%}
+#p1_mid>.p1_mid_menu>ul>li:nth-child(2){width:5%}
+#p1_mid>.p1_mid_menu>ul>li:nth-child(3){width:30%}
+#p1_mid>.p1_mid_menu>ul>li:nth-child(4){width:5%}
+#p1_mid>.p1_mid_menu>ul>li:nth-child(5){width:30%}
+#p1_mid>.p1_mid_menu>ul>li>a,#p1_mid>.p1_mid_menu>ul>li>p{display:inline-block; color:#eeb885; font-size:18px; font-weight:600; line-height:48px}
+#p1_mid>.p1_mid_menu>ul>li>p{margin:0 10px}
+#p1_mid>.p1_thro_line{position:relative; width:70%; border-top:2px solid #f9c194; margin:0 auto; top:25px}
+
+
 /** p5 시작 **/
 #p5_back{background-color:#f6f6f6; padding:5% 0}
 #p5_menu01{top:43% !important}
@@ -348,10 +366,14 @@ a.btn-layerClose:hover {border: 1px solid #091940; background-color: #1F326A; co
     /** 2. 모바일 사이드 햄버거 바 **/
 	.mob-hamburger-div{display: block;}
 	
-	/** 3. 팝업레이어: 로그인 **/
-	
-	
-	
+	/** 3. p1 content **/
+	#p1_mid{max-width: 768px; margin:0 auto;}
+	#p1_mid{position:relative; width:100%}
+	#p1_mid>.p1_mid_menu{position:absolute; width:100%; height:auto; top:96%; border: 0 solid white; border-radius:0;}
+	#p1_mid>.p1_mid_menu>ul{position:relative; width:100%; border-top:1px solid #F9C194; border-bottom:1px solid #F9C194; height:44px; box-sizing:border-box; overflow:hidden}
+	#p1_mid>.p1_mid_menu>ul>li>a,#p1_mid>.p1_mid_menu>ul>li>p{display:inline-block; color:#eeb885; font-size:10px; font-weight:600; line-height:41px}
+	#p1_mid>.p1_mid_menu>ul>li>p{margin:0 }
+	#p1_mid>.p1_thro_line{display: none;}
 	
 }
 
