--- a/src/main/webapp/resources/css/common2.css
+++ b/src/main/webapp/resources/css/common2.css
@@ -160,14 +160,14 @@ h1,h2,h3,h4,h5,h6,p,a,li,div,header,section,footer,label,span,ul,input,textarea
     #p2_footer>ul>li:nth-child(1){width:30%; margin-right:2%}
     #p2_footer>ul>li:nth-child(2){width:68%}
     #p2_header>.p2_util>a, #p2_header>.p2_util>p{font-size:12px}
-    
+
     #p2_mid>.p2_mid_img{width:90%}
     #p2_mid>.p2_mid_img2{width:90%}
     #p2_mid>.p2_mid_img3{width:90%}
-    
+
     #p4_mid .p4_mid_img{width:90%}
     #p4_mid .p4_mid_img2{width:90%}
-    
+
     #p5_board{width:90%; margin:0 auto}
     #p5_board .p5_list_wrap>ul>li:nth-child(1){width:10%}
     #p5_board .p5_list_wrap>ul>li:nth-child(2){width:50%}
@@ -293,7 +293,7 @@ h1,h2,h3,h4,h5,h6,p,a,li,div,header,section,footer,label,span,ul,input,textarea
     #m_p1_header>a{font-size:12px}
     #m_p1_header a{margin-right:2%}
     #m_p1_header a:last-child{margin-right:0}
-    
+
     #m_p1_footer>ul>li:nth-child(1){width:30%; margin-right:2%}
     #m_p1_footer>ul>li:nth-child(2){width:68%}
     #m_p5_board .mp5_list_wrap ul>li>p{font-size:12px}
@@ -302,18 +302,17 @@ h1,h2,h3,h4,h5,h6,p,a,li,div,header,section,footer,label,span,ul,input,textarea
 
 
 
-/************************************* 2020 HGU(WA) JangJuMan  *************************************/
+/************************************* 2020 HGU(WA) JangJuMan 2020.08.09 *************************************/
 
 /** 0. 모바일, PC 버전 **/
 .only-pc{display: block;}
 .only-mobile{display: none;}
 .m_index_main{font-size: 10px !important}
 
-
 /** 1. 팝업 레이어: 폼 메일 **/
 .popup-btn{cursor: pointer}
 .pop-layer .pop-container{padding: 5%}
-.pop-layer{color: #666; line-height: 25px; width: 100%; margin: 10px 0 20px; padding-top: 10px; display: none; position: absolute; top: 50%; left: 50%; width: 50%; height: auto; background-color: #FFF; border: 5px solid #6EDAC1; z-index: 7;} 
+.pop-layer{color: #666; line-height: 25px; width: 100%; margin: 10px 0 20px; padding-top: 10px; display: none; position: absolute; top: 50%; left: 50%; width: 50%; height: auto; background-color: #FFF; border: 5px solid #6EDAC1; z-index: 7;}
 .dim-layer{display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 10}
 .dim-layer .dimBg {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: #000; opacity: .5; filter: alpha(opacity=50)}
 .dim-layer .pop-layer {display: block}
@@ -325,7 +324,7 @@ a.btn-layerClose:hover {border: 1px solid #091940; background-color: #1F326A; co
 .popup-container{padding: 1em;}
 .form-control{padding: 0.3em;border: 1px solid #bbb;border-radius: 3px;margin-top: 0.5%;margin-bottom: 0.5%; width: 100%;font-size: 15px;}
 .popup-submit{display: inline-block;padding: 0 14px;border: 1px solid #bbb;border-radius: 3px;background-color: #f3a244;font-size: 13px;color: #fff;line-height: 25px;curosr: pointer;margin-top: 1%;}
-.popup-submit:hover {border: 1px solid #bbb;background-color: #f3a244;color: #fff;cursor: pointer;} 
+.popup-submit:hover {border: 1px solid #bbb;background-color: #f3a244;color: #fff;cursor: pointer;}
 
 /** 2. 모바일 사이드 햄버거 바 **/
 .mob-hamburger-div{display: none; position: absolute;width: 100%;z-index: 2;text-align: right;padding: 1px;}
@@ -353,20 +352,42 @@ a.btn-layerClose:hover {border: 1px solid #091940; background-color: #1F326A; co
 .login-dim-layer .login-dimBg {position: absolute;top: 0;left: 0;width: 100%;height: 100%;background: #000;opacity: .5;filter: alpha(opacity=50);}
 .login-dim-layer .pop-layer {display: block;}
 
+/* 7. FAQ */
+.faq-mid{position:relative;width:100%;margin-top: -32% !important;margin-top: 1em;margin-bottom: 2em;}
+.faq-mid-line{position:relative;width:100%;border-top:2px solid #f9c194;margin:0 auto;margin-bottom: 2%;margin-top: 1%;}
+.faq-mid-menu{width:95%;margin:0 auto;text-align:center;border:2px solid #f9c194;border-radius:5px;background-color:#FFF;box-sizing:border-box;padding: 2%;padding-top: 2em;padding-bottom: 2em;}
+.faq-title{display:inline-block;color:#eeb885;font-size:35px;font-weight:600;line-height:48px;text-align: left !important;width: 100%;}
+.no-accordion{}
+.faq-no-result{display:inline-block;color:#eeb885;font-size:35px;font-weight:600;line-height:48px;text-align: center;width: 100%;}
+.faq-font{color: #888;font-size:15px;font-weight:600;line-height:30px;}
+.faq-div{padding: 1%;padding-bottom: 0;text-align: right;}
+.faq-input{padding: 0.5% 1%;border: 1px solid #bbb;border-radius: 3px;}
+.faq-submit{padding: 0.5% 1%;border: 1px solid #bbb;border-radius: 3px;background-color:#f3a244;color: white;margin-bottom: 1%;cursor: pointer;}
+.faq-table{border: 1px solid #bbb;margin-top: 1em;padding: 6%;}
+.accordion{border-top: 3px solid #f5b11f;}
+/* .faq-admin-input{width: 95%;margin-top: 2%;border: 1px solid #bbb;border-radius: 3px;padding: 0.2em;} */
+/* .faq-admin-textarea-div{display: inline-block;width: 96%;background-color: #fff;margin-top: 10px;background-size: contain;} */
+.faq-admin-btn-container{text-align: center;padding: 0.5em;padding-top: 0.1em;}
+.faq-admin-btn{padding: 0.5% 1%;border: 1px solid #bbb;border-radius: 3px;background-color:#f3a244;color: white;margin-bottom: 1%;cursor: pointer;margin-right: 0.5em;}
 
+.page-num{display:inline-block;margin: 10px;cursor: pointer;}
+.page-num-selected{font-weight: bold;text-decoration: underline;}
+
+
+/************************************* 모바일 반응형 2020.08.09 *************************************/
 @media screen and (max-width:768px) {
 	/** 0. 모바일, PC 버전 **/
 	.only-pc{display: none;}
 	.only-mobile{display: block;}
-	
+
 	/** 1. 팝업 레이어: 폼 메일 **/
     .pop-layer{width: 95%;top: 48%;}
     .pop-container{}
     .popup-container{padding: 0;}
-    
+
     /** 2. 모바일 사이드 햄버거 바 **/
 	.mob-hamburger-div{display: block;}
-	
+
 	/** 3. p1 content **/
 	#p1_mid{max-width: 768px; margin:0 auto;}
 	#p1_mid{position:relative; width:100%}
@@ -375,16 +396,16 @@ a.btn-layerClose:hover {border: 1px solid #091940; background-color: #1F326A; co
 	#p1_mid>.p1_mid_menu>ul>li>a,#p1_mid>.p1_mid_menu>ul>li>p{display:inline-block; color:#eeb885; font-size:10px; font-weight:600; line-height:41px}
 	#p1_mid>.p1_mid_menu>ul>li>p{margin:0 }
 	#p1_mid>.p1_thro_line{display: none;}
-	
+
 	/** 4. p2 **/
 	.p2_mid_only{padding-bottom: 10%;}
-	
+
 	/** 5. p3 content **/
 	.p3_pra01{position:relative; width:100%; margin:0 auto; text-align:center; padding:5% 0; max-width: 768px; text-align: left;}
 	.p3_pra01>p{font-size: 16px; position:relative; width:90%; margin:0 auto 15px auto; color:#333}
 	.p3_pra01>p>span{color:#e84e1b; font-weight:400; font-size:16px}
 	.p3_pra01>p>br{display: none;}
-	
+
 	/** 6. p4 content **/
 	#p4_mid .p5_pra01{position:relative; width:90%; margin:0 auto; padding:3% 0; text-align:center}
 	#p4_mid .p5_pra01>.p5_pra_title{font-size:26px;}
@@ -393,177 +414,57 @@ a.btn-layerClose:hover {border: 1px solid #091940; background-color: #1F326A; co
 	#p4_mid .p5_spec_si{width: 100%; padding:3% 5%; box-sizing: border-box}
 	#p4_mid .p5_pra01_fin{margin-bottom: 12%;}
 	
+	/* 7. FAQ */
+	.faq-mid{margin-top: -87% !important; margin-bottom: 0}
+	.faq-mid-line{border-top:1px solid #f9c194; width: 90%;}
+	.faq-mid-menu{width:100%;margin:0 auto;text-align:center;border: 0px solid #FFF; border-top:2px solid #f9c194;border-bottom:0px solid #f9c194;border-radius:0px;padding: 0; padding-bottom: 2%;}
+	.faq-title{font-size:28px;text-align: center !important; padding-top: 5%}
+	.no-accordion{border: 1px solid #bbb; border-radius: 3px; padding: 5%;}
+	.faq-no-result{font-size:18px;}
+	.faq-input{width: 50%; font-size: 14px;}
+	.faq-submit{font-size: 14px;}
+	.faq-table{border: 0px solid #bbb;padding: 1%;}
+	.accordion{border-top: 2px solid #f5b11f;}
+	.faq-admin-btn{font-size: 14px;}
+	.footer-disable-background{background-color: #FFF; margin:0 !important; padding: 20% 0}
+	.page-num-selected{font-size: 14px; font-weight: bold;text-decoration: underline;}
+	.faq-table>div>ul{padding-top: 10%; padding-bottom: 0;}
 	
 
-	
+
+
 }
 
 
 
 
-/* faq */
-.faq-mid{
-	position:relative; 
-	width:100%;
-	margin-top: -32% !important;
-	/* margin-bottom: 32%; */
-	margin-top: 1em;
-	margin-bottom: 2em;
-	/* text-align: center; */
-}
-.faq-mid-line{
-	position:relative; 
-	width:100%; 
-	border-top:2px solid #f9c194; 
-	margin:0 auto; 
-	margin-bottom: 2%;
-	margin-top: 1%;
-	/* float: left; */
-	/* top:25px; */
-}
-.faq-mid-menu{
-	/* position:relative; */ 
-	width:95%; 
-	margin:0 auto; 
-	/* height:50px;  */
-	text-align:center; 
-	border:2px solid #f9c194; 
-	border-radius:5px; 
-	background-color:#FFF; 
-	box-sizing:border-box;
-	padding: 2%;
-	padding-top: 2em;
-	padding-bottom: 2em;
-}
-.faq-title{
-	display:inline-block; 
-	color:#eeb885; 
-	font-size:35px; 
-	font-weight:600; 
-	line-height:48px;
-	text-align: left !important;
-	/* float: left; */
-	width: 100%;
-}
-.no-accordion{
-	
-}
-.faq-no-result{
-	display:inline-block; 
-	color:#eeb885; 
-	font-size:35px; 
-	font-weight:600; 
-	line-height:48px;
-	text-align: center;
-	width: 100%;
-}
-.faq-font{
-	 
-	/* color:#eeb885;  */
-	color: #888;
-	font-size:15px; 
-	font-weight:600; 
-	line-height:30px;
-}
-.faq-div{
-	padding: 1%;
-	padding-bottom: 0;
-	text-align: right;
-}
-.faq-input{
-	/* width: 49%; */
-	padding: 0.5% 1%;
-  	border: 1px solid #bbb;
-	border-radius: 3px;
-}
-.faq-submit{
-	/* width: 90% !important; */
-	padding: 0.5% 1%;
-	border: 1px solid #bbb;
-	border-radius: 3px;
-	background-color:#f3a244; 
-	color: white;
-	margin-bottom: 1%;
-	cursor: pointer;
-}
-.faq-table{
-	/* text-align: center; */
-	border: 1px solid #bbb;
-	margin-top: 1em;
-	padding: 6%;
-	/* padding-top: 3%;
-	padding-bottom: 3%; */
-}
-.accordion{
-	border-top: 3px solid #f5b11f;
-}
-.faq-admin-input{
-	width: 95%;
-	margin-top: 2%; 
-	border: 1px solid #bbb; 
-	border-radius: 3px; 
-	padding: 0.2em;
-}
-.faq-admin-textarea-div{
-	display: inline-block;
-	width: 96%;
-	background-color: #fff;
-	margin-top: 10px;
-	background-size: contain;
-}
-.faq-admin-btn-container{
-	text-align: center;
-	padding: 0.5em;
-	padding-top: 0.1em;
-}
-.faq-admin-btn{
-	/* width: 90% !important; */
-	padding: 0.5% 1%;
-	border: 1px solid #bbb;
-	border-radius: 3px;
-	background-color:#f3a244; 
-	color: white;
-	margin-bottom: 1%;
-	cursor: pointer;
-	margin-right: 0.5em;
-}
 
-.page-num{
-	display:inline-block;
-	margin: 10px;
-	cursor: pointer;
-}
-.page-num-selected{
-	font-weight: bold;
-	text-decoration: underline;
-}
 
 
 /* faq Write */
 .faq-write-container{
 	border: 1px solid #bbb;
-	border-radius: 3px; 
+	border-radius: 3px;
 	padding: 1em;
 }
-.faq-input-container{ 
-	text-align: left; 
-	padding: 0.2em 1em; 
+.faq-input-container{
+	text-align: left;
+	padding: 0.2em 1em;
 	margin-bottom: 1em;
 }
 .faq-label{
 	color: #888;
-	font-size:18px; 
-	font-weight:400; 
+	font-size:18px;
+	font-weight:400;
 	/* line-height:30px; */
 }
 .faq-form-input{
-	width: 99%; 
-	border: 1px solid #bbb; 
-	border-radius: 3px; 
+	width: 99%;
+	border: 1px solid #bbb;
+	border-radius: 3px;
 	padding: 0.2em;
 }
 .faq-btn-container{
-	text-align: center; 
-	padding: 0.2em 1em; 
+	text-align: center;
+	padding: 0.2em 1em;
 }
-
