adminProduct : SimpleUpdate, 수정하기 버튼만. 아직 수정하기 JS 에러처리 안함

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -65,6 +65,7 @@ body{
 	text-align: right; 
 	width: 45px; 
 	color: #dedede;
+	cursor: pointer;
 }
 .adminSide_symlink{
 	border-bottom: 1px solid #888;
