--- a/src/main/webapp/resources/css/mall.css
+++ b/src/main/webapp/resources/css/mall.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+icon_heart@charset "UTF-8";
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Passion+One:400");
 
