상품 디테일 수정하기 SQL 누락된 부분 다시 푸시

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -338,6 +338,9 @@ input[type="checkbox"]{
   		.adminProduct_table th:nth-child(n+1):nth-child(-n+2){
   			width: 5%;
   		}
+  		.adminProduct_table th:nth-child(4){
+  			width: 20%;
+  		}
   		.adminProduct_table th:nth-child(8){
   			width: 15%;
   		}
@@ -672,8 +675,11 @@ input[type="checkbox"]{
 	  		font-weight: 400;
 	  		width: 10%;
 	  	}
-	  		.adminProduct_table th:nth-child(n+1):nth-child(-n+2){
+	  		.adminProduct_table th:nth-child(1):nth-child(-n+2){
 	  			width: 5%;
+	  		}
+	  		.adminProduct_table th:nth-child(4){
+	  			width: 20%;
 	  		}
 	  		.adminProduct_table th:nth-child(8){
 	  			width: 15%;
