super Admin: 가입 쇼핑몰 관리(완), 쇼핑몰 관리자 관리(미완), 플랫폼 유저관리(시작도 안함)

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -203,12 +203,18 @@ input[type="checkbox"]{
 .adminTop_btnWhite{
 	background-color: #fff;
 	border: 1px solid #bbb;
-	color: #000;	
+	color: #000;
 }
 	.adminTop_btnWhite:hover{
 		background-color: #f6f6f6;
 	}
-
+.adminTop_btnGrey{
+	background-color: #bbb;
+	color: #fff;
+	cursor: default;
+}
+	.adminTop_btnGrey:hover{
+	}
 
 
 
@@ -515,6 +521,7 @@ input[type="checkbox"]{
 .page-num{display:inline-block;margin: 10px;cursor: pointer;}
 .page-num-selected{font-weight: bold;text-decoration: underline;}
 
+/** superAdminNewAdmin.jsp **/
 
 
 
@@ -619,7 +626,10 @@ input[type="checkbox"]{
 	}
 		.adminTop_btnWhite:hover{
 		}
-	
+	.adminTop_btnGrey{
+	}
+		.adminTop_btnGrey:hover{
+		}
 	
 	
 	/** [ adminDashboard.jsp ] **/
