--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -515,14 +515,35 @@ input[type="checkbox"]{
 	padding: 15px 5px;
 	font-size: 14px;
 }
+	
 
 /** [ Paging ] **/
 .paging-container{text-align: center;}
 .page-num{display:inline-block;margin: 10px;cursor: pointer;}
 .page-num-selected{font-weight: bold;text-decoration: underline;}
 
-/** superAdminNewAdmin.jsp **/
-
+/** [ superAdminNewAdmin.jsp ] **/
+/* from bootstrap */
+.alert{
+	padding: 15px; 
+	margin-bottom: 20px;
+	border: 1px solid transparent;
+ 		border-radius: 4px;
+}
+.alert-success {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #3c763d;
+}
+.alert-danger {
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  color: #a94442;
+}
+.disable-color{
+	background-color: #bbb;
+	color: black;
+}
 
 
 
