superAdmin: 아이디 및 쇼핑몰 이름 중복확인기능. ~쇼핑몰 관리자 관리까지 끝. 플랫폼 유저 관리만 하면 끝날듯...

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -545,6 +545,25 @@ input[type="checkbox"]{
 	color: black;
 }
 
+.superAdmin_idCheck{
+	/* border: 1px solid #0062cc; */
+	font-size: 14px;
+	padding: 5px 20px;
+	background-color: #5c95f9;
+	cursor: pointer;
+	border-radius: 2px;
+	color: #fff;
+	vertical-align: text-bottom;
+	margin-left: 10px;
+	
+	transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0..2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+}
+.superAdmin_idCheck:hover{
+	background-color: #1a6dff;
+}
 
 
 
