adminDelivery 관련 페이지 완성. DB 다시 생성했었음. 저번 커밋이긴한데 spring security를 통한 로그인까지 완성

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -498,7 +498,7 @@ input[type="checkbox"]{
 		width: 5%;
 	}
 	.adminOrder_table th:nth-child(2){
-	 	width: 5%;
+	 	/* width: 5%; */
 	}
 	.adminOrder_table th:nth-child(8){
 	}
@@ -515,6 +515,7 @@ input[type="checkbox"]{
 	font-size: 14px;
 	background-color: #f7f7f7;
 	color: #2d2d2d;
+	word-break: break-all;
 }
 .adminOrder_additionalArea > td:hover{
 	background-color: #f7f7f7;
